welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:3: error: not found: value min
  var max2:Int=min.Int
               ^